force-app/main/default/objects/Adopcion__c/Adopcion__c.object-meta.xml
<CustomObject>
    <label>Adopción</label>
    <nameField>
        <displayFormat>Adopción-{0000}</displayFormat>
        <label>Adopción Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adopciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>