force-app/main/default/objects/Adopcion__c/fields/Aprobador__c.field-meta.xml
<CustomField>
    <fullName>Aprobador__c</fullName>
    <businessOwnerGroup>Aprobadores_de_Adopcion</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que especifica el usuario encargado de aprobar la adopción.</description>
    <inlineHelpText>Selecciona el usuario que será responsable de aprobar esta adopción</inlineHelpText>
    <label>Aprobador</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El usuario seleccionado no tiene el perfil adecuado para aprobar la adopción</errorMessage>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>Abierto</value>
        </filterItems>
        <infoMessage>Por favor, seleccione un usuario con el perfil adecuado para aprobar la adopción.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Adopciones</relationshipName>
    <type>Lookup</type>
</CustomField>