force-app/main/default/objects/Adopcion__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Adopciones</relationshipLabel>
    <relationshipName>Adopciones</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>