force-app/main/default/objects/Adopcion__c/fields/Correo_Electronico_Adopcion__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico_Adopcion__c</fullName>
    <description>Correo electrónico del contacto relacionado con la adopción.</description>
    <formula>Contacto__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Este campo muestra el correo electrónico del contacto asociado con esta adopción.</inlineHelpText>
    <label>Correo Electrónico Adopción</label>
    <type>Text</type>
</CustomField>