force-app/main/default/objects/Adopcion__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Indica el estado de la adopción de una mascota.</description>
    <inlineHelpText>Selecciona el estado actual de la adopción de la mascota.</inlineHelpText>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abierto</fullName>
            </value>
            <value>
                <fullName>En aprobación</fullName>
            </value>
            <value>
                <fullName>A la espera de la búsqueda de mascotas</fullName>
            </value>
            <value>
                <fullName>Finalizada</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>