force-app/main/default/objects/Adopcion__c/fields/Fecha_de_adopcion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_adopcion__c</fullName>
    <label>Fecha de adopción</label>
    <required>true</required>
    <type>Date</type>
</CustomField>