force-app/main/default/objects/Adopcion__c/validationRules/EdadMinimaParaAdopcion.validationRule-meta.xml
<ValidationRule>
    <fullName>EdadMinimaParaAdopcion</fullName>
    <active>true</active>
    <description>Validación que asegura que la edad del contacto sea al menos 18 años para permitir la adopción</description>
    <errorConditionFormula>TODAY() - Contacto__r.Birthdate &lt; 6570</errorConditionFormula>
    <errorMessage>El contacto asociado debe tener al menos 18 años para realizar la adopción. Verifica la Fecha de Nacimiento en el registro del Contacto asociado</errorMessage>
</ValidationRule>