force-app/main/default/objects/Adopcion__c/validationRules/FechaNoEnElFuturo.validationRule-meta.xml
<ValidationRule>
    <fullName>FechaNoEnElFuturo</fullName>
    <active>true</active>
    <description>Esta regla de validación asegura que la fecha de adopción no sea en el futuro</description>
    <errorConditionFormula>Fecha_de_adopcion__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Fecha_de_adopcion__c</errorDisplayField>
    <errorMessage>La fecha de adopción no puede ser futura. Por favor, ingresa una fecha válida</errorMessage>
</ValidationRule>